<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostViewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relLayout1_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include layout="@layout/snippet_post_toolbar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relL1_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/relLayout1_view"
        android:background="@drawable/banner_border">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_photo_main_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="0.5dp" />

        <TextView
            android:id="@+id/username_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/profile_photo_main_view"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/profile_photo_main_view"
            android:layout_below="@+id/username_main_view"
            android:textColor="@color/colorAccent"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/btn_postOption"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_post_option"
            android:visibility="gone" />

    </RelativeLayout>

    <Utils.SquareImageView
        android:id="@+id/post_image_main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relL1_view"
        android:scaleType="centerCrop" />

    <ProgressBar
        android:id="@+id/progressBar_view"
        style="@android:style/Widget.Holo.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relL1"
        android:layout_alignStart="@+id/post_image_main_view"
        android:layout_alignTop="@+id/post_image_main_view"
        android:layout_alignEnd="@+id/post_image_main_view"
        android:layout_alignBottom="@+id/post_image_main_view"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="150dp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/relL2_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/post_image_main_view"
        android:background="@drawable/banner_border"
        android:padding="6dp">

        <RelativeLayout
            android:id="@+id/likeLayout_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/image_egg_liked_view"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/liked_egg_main_color"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/image_egg_not_liked_view"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/not_liked_egg_main_color" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/comment_main_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/likeLayout_view"
            android:src="@drawable/ic_comment"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relL3_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relL2_view"
        android:background="#FDEDE3"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/rating_layout_post_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp">

            <ImageView
                android:id="@+id/rating_like_1_pv"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/egg_rate_1"
                />
            <TextView
                android:id="@+id/rating_like_text_1_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=": 0"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/rating_like_2_pv"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/egg_rate_2"/>

            <TextView
                android:id="@+id/rating_like_text_2_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=": 0"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/rating_like_3_pv"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/egg_rate_3"/>
            <TextView
                android:id="@+id/rating_like_text_3_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=": 0"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/rating_like_4_pv"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/egg_rate_4"/>
            <TextView
                android:id="@+id/rating_like_text_4_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text=": 0"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/rating_like_5_pv"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/egg_rate_5"/>
            <TextView
                android:id="@+id/rating_like_text_5_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=": 0"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/image_likes_info_main_feed_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:clickable="true"
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_below="@id/rating_layout_post_view"/>

        <TextView
            android:id="@+id/image_caption_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_likes_info_main_feed_view"
            android:layout_marginTop="1dp"
            android:text=""
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/image_comments_link_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_caption_main_view"
            android:layout_marginTop="1dp"
            android:padding="2dp"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/image_time_posted_main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_comments_link_main_view"
            android:layout_marginTop="1dp"
            android:text=""
            android:padding="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="11sp" />
    </RelativeLayout>
    </RelativeLayout>
</ScrollView>