<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/edit_post"
        android:contentDescription="edit"
        android:title="Edit Post" />
    <item
        android:id="@+id/delete_post"
        android:contentDescription="delete"
        android:title="Delete Post" />
</menu>