...
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/post_rating_bar"
            style="@style/postRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:stepSize="1"
            android:layout_gravity="center"
...
            android:layout_centerHorizontal="true"
            android:isIndicator="false"
            />


        <TextView
            android:id="@+id/btn_done"
            android:layout_width="117dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
...
