<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F99F63"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/galleryToolBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cancelPost"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/cancel_mark_desc"
                    android:src="@drawable/ic_cancel" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/cancelPost"
                    android:id="@+id/spinnerDirectory"
                    android:textSize="20sp"
                    android:textColor="#4E260E"
                    android:text="Gallery"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical">


                </Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_btn"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textSize="18sp"
                    android:textColor="#4E260E"
                    android:layout_centerVertical="true"
                    android:id="@+id/nextBtn"
                    />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

</merge>