...
                    android:id="@+id/upload_post_close"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="POST"
                    android:id="@+id/upload_post_post"
                    android:textSize="16sp"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/colorPrimaryDark"/>

...
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:textColor="@color/colorPrimaryDark"
            android:hint="Description"
            android:padding="10dp"
            android:maxLines="5"
            android:id="@+id/upload_post_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
...
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:background="@drawable/edittext_background"
            android:id="@+id/tvPlace"/>

        <Button
            android:id="@+id/upload_post_add_location_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="ADD LOCATION" />
...
