...
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="349dp"
            tools:context=".MapsActivity" />

        <ListView
            android:id="@+id/listPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDEDE3"
            android:textColor="@color/colorPrimary"
            android:divider="#FDEDE3"
            android:dividerHeight="1dip">
...
